# caching-and-kubernetes

./: .gitignore  README.md  SHORT-ANSWER.md
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
lab3/: Dockerfile  README.md  model_pipeline.pkl  pyproject.toml
lab3-caching-and-kubernetes/: Dockerfile  README.md
lab3-caching-and-kubernetes/infra/: deployment-pythonapi.yaml
lab3-caching-and-kubernetes/src/: main.py
lab3/infra/: deployment-pythonapi.yaml  deployment-redis.yaml  service-prediction.yaml  service-redis.yaml
lab3/src/: housing_predict.py
lab3/tests/: test_src.py
