[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["Tess Cotter <tesscc@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = {extras = ["standard"], version = "^0.112.2"}
fastapi-cache2 = "0.1.9"
redis = "^5.0.1"
joblib = "1.4.2"
scikit-learn = "1.5.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
